--- a/Lab1/Mandelbrot_todo.ipynb
+++ b/Lab1/Mandelbrot_todo.ipynb
@@ -1,60 +1,48 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "UkErqiVjluZQ"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Temporal Vectorization"
-      ],
       "metadata": {
         "id": "R530fAlPWX5u"
-      }
+      },
+      "source": [
+        "# Temporal Vectorization"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We will talk about the **Mandelbrot set**, it is the set of complex numbers $c$ for which the function $f_c(z)=z^2+c$ does not diverge when iterated from $z=0$, i.e., for which the sequence $f_c(0)$, $f_c(f_c(0))$, etc., remains bounded in **absolute value**. It is very *easy to compute*, but it can take a *very long time* because you need to ensure a given number does not diverge. This is generally done by iterating the computation up to a **maximum number of iterations**, after which, if the number is still within some bounds, it is considered **non-divergent**. Of course, the **more iterations** you do, the **more precision** you get. Notice (and appreciate maybe) the self-repeating patterns below!"
-      ],
       "metadata": {
         "id": "_dF41btAWlry"
-      }
+      },
+      "source": [
+        "We will talk about the **Mandelbrot set**, it is the set of complex numbers $c$ for which the function $f_c(z)=z^2+c$ does not diverge when iterated from $z=0$, i.e., for which the sequence $f_c(0)$, $f_c(f_c(0))$, etc., remains bounded in **absolute value**. It is very *easy to compute*, but it can take a *very long time* because you need to ensure a given number does not diverge. This is generally done by iterating the computation up to a **maximum number of iterations**, after which, if the number is still within some bounds, it is considered **non-divergent**. Of course, the **more iterations** you do, the **more precision** you get. Notice (and appreciate maybe) the self-repeating patterns below!"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![](https://www.labri.fr/perso/nrougier/from-python-to-numpy/data/Fractal-Broccoli-cropped.jpg)"
-      ],
       "metadata": {
         "id": "Aa58KedHX_Lj"
-      }
+      },
+      "source": [
+        "![](https://www.labri.fr/perso/nrougier/from-python-to-numpy/data/Fractal-Broccoli-cropped.jpg)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Helper Function(s) (Can Safely skip!)"
-      ],
       "metadata": {
         "id": "UkErqiVjluZQ"
-      }
+      },
+      "source": [
+        "## Helper Function(s) (Can Safely skip!)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6esNdUBolnXH"
+      },
+      "outputs": [],
       "source": [
         "def timeit(stmt, globals):\n",
         "    '''\n",
@@ -100,24 +88,24 @@
         "            sec = msec / 1000\n",
         "            print(\"%d loops, best of %d: %.*g sec per loop\" % (number, repeat,\n",
         "                                                               precision, sec))"
-      ],
-      "metadata": {
-        "id": "6esNdUBolnXH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Pure Python implementation"
-      ],
       "metadata": {
         "id": "yVsbA25eahyh"
-      }
+      },
+      "source": [
+        "## Pure Python implementation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VkDtNcTCagTy"
+      },
+      "outputs": [],
       "source": [
         "def mandelbrot_python(xmin, xmax, ymin, ymax, xn, yn, maxiter, horizon=2.0):\n",
         "  '''\n",
@@ -155,33 +143,33 @@
         "    r1 = [xmin+i*(xmax-xmin)/xn for i in range(xn)]\n",
         "    r2 = [ymin+i*(ymax-ymin)/yn for i in range(yn)]\n",
         "    return [mandelbrot(complex(r, i),maxiter) for r in r1 for i in r2]"
-      ],
-      "metadata": {
-        "id": "VkDtNcTCagTy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The main function in this code `mandelbrot(z, complex)` is the slowest! But it is what is involved in computing $f_c(f_c(z))$, The vectorization of such code is not easy! (Has an internal return, which can cause early stopping for a few numbers and not so for other few!)"
-      ],
       "metadata": {
         "id": "h8zD0kTwdm-U"
-      }
+      },
+      "source": [
+        "The main function in this code `mandelbrot(z, complex)` is the slowest! But it is what is involved in computing $f_c(f_c(z))$, The vectorization of such code is not easy! (Has an internal return, which can cause early stopping for a few numbers and not so for other few!)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Numpy Implementation"
-      ],
       "metadata": {
         "id": "ZElOBgMQaMMI"
-      }
+      },
+      "source": [
+        "## Numpy Implementation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XQ8nuXPqdmgE"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -217,24 +205,24 @@
         "    #Your code ends here##############################\n",
         "    N[I] = maxiter-1\n",
         "    return Z, N"
-      ],
-      "metadata": {
-        "id": "XQ8nuXPqdmgE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Compare"
-      ],
       "metadata": {
         "id": "9rwOsaOZoJ6q"
-      }
+      },
+      "source": [
+        "## Compare"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XkUhpFL-oKwT"
+      },
+      "outputs": [],
       "source": [
         "xmin, xmax, xn = -2.25, +0.75, int(3000/3)\n",
         "ymin, ymax, yn = -1.25, +1.25, int(2500/3)\n",
@@ -242,33 +230,33 @@
         "#Ideally you should observe a 5x speedup.\n",
         "timeit(\"mandelbrot_python(xmin, xmax, ymin, ymax, xn, yn, maxiter)\", globals())\n",
         "timeit(\"mandelbrot_numpy(xmin, xmax, ymin, ymax, xn, yn, maxiter)\", globals())"
-      ],
-      "metadata": {
-        "id": "XkUhpFL-oKwT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Can we go faster? Notice that at each iteration we are performing xn$\\times$yn tests, even though we know for sure that there is going to be no update to already diverged numbers! (the solution is a typical space-time complexity trade-off)"
-      ],
       "metadata": {
         "id": "J-TSoy36qUfd"
-      }
+      },
+      "source": [
+        "Can we go faster? Notice that at each iteration we are performing xn$\\times$yn tests, even though we know for sure that there is going to be no update to already diverged numbers! (the solution is a typical space-time complexity trade-off)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Mandelbrot Fastest"
-      ],
       "metadata": {
         "id": "CpFgdqkoqvsq"
-      }
+      },
+      "source": [
+        "## Mandelbrot Fastest"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PG_Z0ePSqW2n"
+      },
+      "outputs": [],
       "source": [
         "def mandelbrot_numpy_2(xmin, xmax, ymin, ymax, xn, yn, itermax, horizon=2.0):\n",
         "    '''\n",
@@ -316,62 +304,73 @@
         "        Xi, Yi = Xi[I], Yi[I]\n",
         "        C = C[I]\n",
         "    return Z_.T, N_.T"
-      ],
-      "metadata": {
-        "id": "PG_Z0ePSqW2n"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Test!"
-      ],
       "metadata": {
         "id": "tXFB90L8rKcI"
-      }
+      },
+      "source": [
+        "## Test!"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Ideally you should observe a 10x speedup.\n",
-        "timeit(\"mandelbrot_numpy_2(xmin, xmax, ymin, ymax, xn, yn, maxiter)\", globals())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jB1hvI8lrLZP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Ideally you should observe a 10x speedup.\n",
+        "timeit(\"mandelbrot_numpy_2(xmin, xmax, ymin, ymax, xn, yn, maxiter)\", globals())"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "As a further exercise, try plotting the set of Mandelbrot Numbers you get, using matplotlib. It's a beautiful pattern."
-      ],
       "metadata": {
         "id": "o08yQi7frb0v"
-      }
+      },
+      "source": [
+        "As a further exercise, try plotting the set of Mandelbrot Numbers you get, using matplotlib. It's a beautiful pattern."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![Mandelbrot set](https://www.labri.fr/perso/nrougier/from-python-to-numpy/data/mandelbrot.png)"
-      ],
       "metadata": {
         "id": "Z3ymra7UszbK"
-      }
+      },
+      "source": [
+        "![Mandelbrot set](https://www.labri.fr/perso/nrougier/from-python-to-numpy/data/mandelbrot.png)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Thank you. <br>\n",
-        "Code for this notebook is borrowed and edited from [here](https://www.labri.fr/perso/nrougier/from-python-to-numpy/). Feel free to check the book out to explore vectorization in different contexts and examples. This small tutorial was made by [Karan Bania](https://karannb.github.io).<br>\n",
-        "Copyright (2017) Nicolas P. Rougier - BSD license"
-      ],
       "metadata": {
         "id": "dOnahvHernFj"
-      }
+      },
+      "source": [
+        "## Thank you. <br>\n",
+        "This small tutorial was made by [Karan Bania](https://karannb.github.io).<br>"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "UkErqiVjluZQ"
+      ],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
