--- a/Lab1/Conv2D_todo.ipynb
+++ b/Lab1/Conv2D_todo.ipynb
@@ -1,59 +1,50 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Take-home problem Lab1, implementing a 2D convolution"
-      ],
       "metadata": {
         "id": "uzCqAuesqzoq"
-      }
+      },
+      "source": [
+        "# Take-home problem Lab1, implementing a 2D convolution"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "I believe anyone can find a large number of resources for this specific topic, please go through any of them to get a hang of the actual theory. I definitely recommend this [TDS](https://towardsdatascience.com/intuitively-understanding-convolutions-for-deep-learning-1f6f42faee1#:~:text=The%202D%20convolution%20is%20a,into%20a%20single%20output%20pixel.) blog post. But anyways I'm attachin a small gif for your reference, with the actual equations! Happy coding."
-      ],
       "metadata": {
         "id": "xap9bu44rEkZ"
-      }
+      },
+      "source": [
+        "I believe anyone can find a large number of resources for this specific topic, please go through any of them to get a hang of the actual theory. I definitely recommend this [TDS](https://towardsdatascience.com/intuitively-understanding-convolutions-for-deep-learning-1f6f42faee1#:~:text=The%202D%20convolution%20is%20a,into%20a%20single%20output%20pixel.) blog post. But anyways I'm attachin a small gif for your reference, with the actual equations! Happy coding."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![conv2d-gif](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*j-srXhSUW5s1Ysp86J6GHA.gif)"
-      ],
       "metadata": {
         "id": "yWQ08qG8r0G_"
-      }
+      },
+      "source": [
+        "![conv2d-gif](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*j-srXhSUW5s1Ysp86J6GHA.gif)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rdE0EiULsJbG"
+      },
       "source": [
         "$$H_{out} = \\frac{H_{in} - H_{filter}}{S} + 1$$ <br>\n",
         "$$W_{out} = \\frac{W_{in} - W_{filter}}{S} + 1$$ <br>\n",
         "Where H, W stand for the height and width of the image and $H_{filter}$ or $W_{filter}$ denotes the filter size (or kernel size) and S is the stride. We have also added a batch_size dimension as you will see. **Note :  we are assuming there is no padding so don't worry about that.**"
-      ],
-      "metadata": {
-        "id": "rdE0EiULsJbG"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "e8CaHoF7vHaI"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pickle\n",
@@ -61,24 +52,24 @@
         "# Note : for all the following cells first you'll have to assign a few variables\n",
         "# the number of appropriate lines does not include that! so dw if you overshoot\n",
         "# them, the small documentation can be helpful in assigning names to variables"
-      ],
-      "metadata": {
-        "id": "e8CaHoF7vHaI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Helper Function(s)"
-      ],
       "metadata": {
         "id": "gE1NpWpIu8jO"
-      }
+      },
+      "source": [
+        "## Helper Function(s)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BkJE_aGZwMUq"
+      },
+      "outputs": [],
       "source": [
         "np.random.seed(123) # Don't change this\n",
         "with open('weights/out1.pkl', 'rb') as handle:\n",
@@ -97,15 +88,15 @@
         "input[\"w\"] = w\n",
         "input[\"b\"] = b\n",
         "input[\"conv_param\"] = conv_param"
-      ],
-      "metadata": {
-        "id": "BkJE_aGZwMUq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "67OFyQhpvO4M"
+      },
+      "outputs": [],
       "source": [
         "class bcolors:\n",
         "  OKGREEN = '\\033[92m'\n",
@@ -136,15 +127,15 @@
         "    assert (conv_forward_vectorized(input[\"x\"], input[\"w\"], input[\"b\"], input[\"conv_param\"]) == output).all(), f\"{bcolors.WARNING}Wrong implementation!{bcolors.ENDC}\"\n",
         "    assert (out1 == out3).all(), f\"{bcolors.WARNING}Your outputs (naive and vectorized) don't match!{bcolors.ENDC}\"\n",
         "    print(f\"{bcolors.OKGREEN}Correct implementation.{bcolors.ENDC}\")"
-      ],
-      "metadata": {
-        "id": "67OFyQhpvO4M"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jDr3f8ow6q2_"
+      },
+      "outputs": [],
       "source": [
         "def timeit(stmt, globals):\n",
         "    '''\n",
@@ -190,21 +181,16 @@
         "            sec = msec / 1000\n",
         "            print(\"%d loops, best of %d: %.*g sec per loop\" % (number, repeat,\n",
         "                                                               precision, sec))"
-      ],
-      "metadata": {
-        "id": "jDr3f8ow6q2_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Naïve for-loop implementation"
-      ],
       "metadata": {
         "id": "buwnAtmmuvIS"
-      }
+      },
+      "source": [
+        "## Naïve for-loop implementation"
+      ]
     },
     {
       "cell_type": "code",
@@ -249,49 +235,54 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-1CzUMPL5_ly"
+      },
+      "outputs": [],
       "source": [
         "start = time.time()\n",
         "conv_forward_naive(x, w, b, conv_param)\n",
         "print(f\"Naive implementation took : {time.time() - start}s\")\n",
         "function_checker('conv_forward_naive', input, out1)"
-      ],
-      "metadata": {
-        "id": "-1CzUMPL5_ly"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QJ1kGBfiut27"
+      },
       "source": [
         "## Vectorized implementation\n",
         "\n",
         "Warning : this is not easy! A rough sketch of what you have to do."
-      ],
-      "metadata": {
-        "id": "QJ1kGBfiut27"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![method](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*whVcezzOdfMxDd5UZUG3tw.png)"
-      ],
       "metadata": {
         "id": "ZH0MpBQpxXtc"
-      }
+      },
+      "source": [
+        "![method](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*whVcezzOdfMxDd5UZUG3tw.png)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "First (the hard part), you'll have to manipulate your input to be in this modified shape, such that, it can be 'strided over' easily. Hint : [np.lib.stride_tricks.as_strided](https://numpy.org/doc/stable/reference/generated/numpy.lib.stride_tricks.as_strided.html)!"
-      ],
       "metadata": {
         "id": "pQr4AaZG0-gC"
-      }
+      },
+      "source": [
+        "First (the hard part), you'll have to manipulate your input to be in this modified shape, such that, it can be 'strided over' easily. Hint : [np.lib.stride_tricks.as_strided](https://numpy.org/doc/stable/reference/generated/numpy.lib.stride_tricks.as_strided.html)!"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "W0zw5Yu8u4EX"
+      },
+      "outputs": [],
       "source": [
         "def stride_input(x, w, conv_param):\n",
         "    \"\"\"\n",
@@ -323,35 +314,35 @@
         "    #                             END OF YOUR CODE                            #\n",
         "    ###########################################################################\n",
         "    return out"
-      ],
-      "metadata": {
-        "id": "W0zw5Yu8u4EX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "function_checker('stride_input', input, out2)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "YcZ_1BEw6KRZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "function_checker('stride_input', input, out2)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Now (the easy part), you have to 'efficiently' sum over the new dimesnions/windows that you have just created. Hint : [np.einsum](https://numpy.org/doc/stable/reference/generated/numpy.einsum.html).\n"
-      ],
       "metadata": {
         "id": "bcPkM8Li4W9N"
-      }
+      },
+      "source": [
+        "Now (the easy part), you have to 'efficiently' sum over the new dimesnions/windows that you have just created. Hint : [np.einsum](https://numpy.org/doc/stable/reference/generated/numpy.einsum.html).\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dhbqvDKJ4uVa"
+      },
+      "outputs": [],
       "source": [
         "def conv_forward_vectorized(x, w, b, conv_param):\n",
         "    \"\"\"\n",
@@ -384,35 +375,52 @@
         "    #                             END OF YOUR CODE                            #\n",
         "    ###########################################################################\n",
         "    return out"
-      ],
-      "metadata": {
-        "id": "dhbqvDKJ4uVa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UN6hlnNF6LBw"
+      },
+      "outputs": [],
       "source": [
         "start = time.time()\n",
         "conv_forward_vectorized(x, w, b, conv_param)\n",
         "print(f\"Vectorized implementation took : {time.time() - start}s\")\n",
         "function_checker('conv_forward_vectorized', input, out3)"
-      ],
-      "metadata": {
-        "id": "UN6hlnNF6LBw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Ideally you should observe a huge speedup! (can be as high as 85x)"
-      ],
       "metadata": {
         "id": "TjkPXKp29Saw"
-      }
+      },
+      "source": [
+        "Ideally you should observe a huge speedup! (can be as high as 85x)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Thank you. <br>\n",
+        "This small tutorial was made by [Karan Bania](https://karannb.github.io).<br>"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
