--- a/Lab1/spacial_TODO.ipynb
+++ b/Lab1/spacial_TODO.ipynb
@@ -421,9 +421,7 @@
    "source": [
     "## Thank you.\n",
     "\n",
-    "Code for this notebook is borrowed and edited from [here](https://www.labri.fr/perso/nrougier/from-python-to-numpy/). Feel free to check the book out to explore vectorization in different contexts and examples. \n",
-    "This small tutorial was made by [Shreyas V](https://github.com/shreyasvinaya).\\\n",
-    "Copyright (2017) Nicolas P. Rougier - BSD license"
+    "This small tutorial was made by [Shreyas V](https://github.com/shreyasvinaya)."
    ]
   }
  ],
