--- a/Lab1/spatial_TODO.ipynb
+++ b/Lab1/spatial_TODO.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spacial Vectorization"
+    "# Spatial Vectorization"
    ]
   },
   {
