--- a/Lab2/Regression_ToDo.ipynb
+++ b/Lab2/Regression_ToDo.ipynb
@@ -1,36 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Logistic Regression"
-      ],
       "metadata": {
         "id": "FtMNLQb6_9WA"
-      }
+      },
+      "source": [
+        "# Logistic Regression"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Helper Functions"
-      ],
       "metadata": {
         "id": "HJQ-bKpZGRCF"
-      }
+      },
+      "source": [
+        "## Helper Functions"
+      ]
     },
     {
       "cell_type": "code",
@@ -107,6 +93,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7vXqELlpVqQT"
+      },
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -168,54 +159,54 @@
         "        inputs = add_intercept_fn(inputs)\n",
         "\n",
         "    return inputs, labels"
-      ],
-      "metadata": {
-        "id": "7vXqELlpVqQT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Logistic Regression"
-      ],
       "metadata": {
         "id": "WgwosIVrGtmP"
-      }
+      },
+      "source": [
+        "## Logistic Regression"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Load Data"
-      ],
       "metadata": {
         "id": "wUfS7wjiVlO7"
-      }
+      },
+      "source": [
+        "### Load Data"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x_train, y_train = load_dataset('ds1_train.csv', add_intercept=True)\n",
-        "x_eval, y_eval = load_dataset('ds1_valid.csv', add_intercept=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "TbutjwPtVnUE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "x_train, y_train = load_dataset('ds1_train.csv', add_intercept=True)\n",
+        "x_eval, y_eval = load_dataset('ds1_valid.csv', add_intercept=True)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### In `sklearn` format"
-      ],
       "metadata": {
         "id": "-ff4nF4NWECW"
-      }
+      },
+      "source": [
+        "### In `sklearn` format"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nPAHuUOCGvLF"
+      },
+      "outputs": [],
       "source": [
         "class LogisticRegression(LinearModel):\n",
         "    \"\"\"Logistic regression with Newton's Method as the solver.\n",
@@ -280,48 +271,48 @@
         "        \"\"\"\n",
         "        y_pred = self.predict(x)\n",
         "        return (y_pred == y).sum()/len(y)"
-      ],
-      "metadata": {
-        "id": "nPAHuUOCGvLF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Train!"
-      ],
       "metadata": {
         "id": "hrE9JL1wY_K1"
-      }
+      },
+      "source": [
+        "### Train!"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-VEZFMCWYzX6"
+      },
+      "outputs": [],
       "source": [
         "model = LogisticRegression()\n",
         "model.fit(x_train, y_train)\n",
         "\n",
         "y_pred = model.predict(x_eval) > 0.5\n",
         "print(f\"Achieved {100*(y_pred == y_eval).sum()/len(y_eval):.2f}% accuracy.\")"
-      ],
-      "metadata": {
-        "id": "-VEZFMCWYzX6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### But what's the big talk of using sklearn? I'll talk about `pipelines`, which are very similar to `nn.Sequential` or `keras.Sequential` and so reduces a lot of coding on our part, check out the next cell."
-      ],
       "metadata": {
         "id": "9ipCtW35Z-Gr"
-      }
+      },
+      "source": [
+        "### But what's the big talk of using sklearn? I'll talk about `pipelines`, which are very similar to `nn.Sequential` or `keras.Sequential` and so reduces a lot of coding on our part, check out the next cell."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QFo7Q7s8azze"
+      },
+      "outputs": [],
       "source": [
         "!pip install -q scikit-learn\n",
         "import sklearn\n",
@@ -329,28 +320,28 @@
         "from sklearn.pipeline import Pipeline, FeatureUnion\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import GridSearchCV"
-      ],
-      "metadata": {
-        "id": "QFo7Q7s8azze"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1mjNHB9EeK9B"
+      },
+      "outputs": [],
       "source": [
         "x_train, y_train = load_dataset('ds1_train.csv', add_intercept=False)\n",
         "x_eval, y_eval = load_dataset('ds1_valid.csv', add_intercept=False)\n",
         "# try add_intercept=True, can you guess why it fails?!"
-      ],
-      "metadata": {
-        "id": "1mjNHB9EeK9B"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "G9i8Kbm4bCSw"
+      },
+      "outputs": [],
       "source": [
         "pipe = Pipeline([('scaler', StandardScaler()),\n",
         "                 ('estimator', LogisticRegression())])\n",
@@ -358,25 +349,25 @@
         "\n",
         "y_pred = pipe.predict(x_eval) > 0.5\n",
         "print(f\"Achieved {100*(y_pred == y_eval).sum()/len(y_eval):.2f}% accuracy.\")"
-      ],
-      "metadata": {
-        "id": "G9i8Kbm4bCSw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rjS50c97gLUv"
+      },
       "source": [
         "### Although the accuracy dropped but this helps with writing (annoying) Cross Validation code!\n",
         "Note the '__' and the warnings, which are fine."
-      ],
-      "metadata": {
-        "id": "rjS50c97gLUv"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dnV-9zgOfxw2"
+      },
+      "outputs": [],
       "source": [
         "param_grid = {\"estimator__step_size\":[1, 0.1, 1e-3, 1e-4]}\n",
         "search = GridSearchCV(pipe, param_grid, scoring='accuracy')\n",
@@ -386,42 +377,42 @@
         "\n",
         "y_pred = search.best_estimator_.predict(x_eval) > 0.5\n",
         "print(f\"Achieved {100*(y_pred == y_eval).sum()/len(y_eval):.2f}% accuracy.\")"
-      ],
-      "metadata": {
-        "id": "dnV-9zgOfxw2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Poisson regression"
-      ],
       "metadata": {
         "id": "6VxYMzQUpP3h"
-      }
+      },
+      "source": [
+        "## Poisson regression"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### You have to basically implement the full above pipeline (not just the pipeline!) add data, write the `.fit()` function and `.predict()` function."
-      ],
       "metadata": {
         "id": "U1g2XIHqpY-p"
-      }
+      },
+      "source": [
+        "### You have to basically implement the full above pipeline (not just the pipeline!) add data, write the `.fit()` function and `.predict()` function."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Poisson regression"
-      ],
       "metadata": {
         "id": "PWdIqXdepxWj"
-      }
+      },
+      "source": [
+        "### Poisson regression"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ujkv_Ux_pSqE"
+      },
+      "outputs": [],
       "source": [
         "class PoissonRegression(LinearModel):\n",
         "    \"\"\"\n",
@@ -442,31 +433,7 @@
         "            y: Training example labels. Shape (m,).\n",
         "        \"\"\"\n",
         "        # *** START CODE HERE ***\n",
-        "        m, n = x.shape\n",
-        "\n",
-        "        self.theta = np.random.randn(n)\n",
-        "        i = 0\n",
-        "\n",
-        "        #for i in range(self.max_iter):\n",
-        "        while True:\n",
-        "\n",
-        "            hx = np.exp(x.dot(self.theta))\n",
-        "            old_theta = self.theta\n",
-        "\n",
-        "            grad_theta = (x.T).dot(y - hx)/m\n",
-        "\n",
-        "            loss = np.sum(y - hx)/m\n",
-        "            self.theta = self.theta + self.step_size*grad_theta\n",
-        "\n",
-        "            if self.verbose and (i+1)%(self.max_iter/10)==0:\n",
-        "                #print(grad_theta)\n",
-        "                print(f\"Iteration {i+1}, Loss : {loss:.4f}\")\n",
-        "\n",
-        "            if np.linalg.norm(self.theta - old_theta, ord=1) < self.eps:\n",
-        "                print(f\"Final Iteration {i+1}, Loss : {loss:.4f}\")\n",
-        "                break\n",
-        "\n",
-        "            i += 1\n",
+        "        \n",
         "        # *** END CODE HERE ***\n",
         "\n",
         "    def predict(self, x):\n",
@@ -480,32 +447,40 @@
         "            Floating-point prediction for each input, shape (m,).\n",
         "        \"\"\"\n",
         "        # *** START CODE HERE ***\n",
-        "        return np.exp(x.dot(self.theta))\n",
         "        # *** END CODE HERE ***"
-      ],
-      "metadata": {
-        "id": "ujkv_Ux_pSqE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Train!"
-      ],
       "metadata": {
         "id": "xUiYKmtzp30k"
-      }
+      },
+      "source": [
+        "### Train!"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "This tutorial was made by Karan, and borrows from the official <a href=\"https://scikit-learn.org/stable/\">SciKit learn Docs</a>."
-      ],
       "metadata": {
         "id": "XJZ4hzlhqIqw"
-      }
+      },
+      "source": [
+        "This tutorial was made by Karan, and borrows from the official <a href=\"https://scikit-learn.org/stable/\">SciKit learn Docs</a>."
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
